# MultifactorAuth

./: .cursorignore  .gitignore  Makefile  README.md  README_SIMPLIFIED.md  auth_system.c  auth_system.h  authenticated_client.c  emailFunction.c  emailTest.c  emailTest.h  encrypted_users.txt  encryptionOperations  encryptionTools.c  encryptionTools.h  fileOperations.c  fileOperations.h  generate_rsa_keys.c  rest_client.c  serverConfig.c  serverConfig.h  simple_test_client.c  unified_client.c  unified_server.c  users.txt
.cursor/: CMakeLists.txt
IPTableFunctions/: IPtableFunctions.c  IPtableFunctions.h
IPTable_tools/: IPtableOperations.c  IPtableOperations.h
JWT_tools/: README.md  client_integration_example.c  jwtOperations.c  jwtOperations.h  server_integration_example.c
REST_tools/: rest_client.c  serverRest.c  serverRestOperations.c  serverRestOperations.h
TestingScripts/: ConnectMultiTest.sh  evaluate_stress_test.sh  monitor_stress_test.sh  multi_user_login.sh  simple_auth_test.sh
UserDirectory/: .perms  userAccessible
configTools/: serverConf.json  serverConfig.c
config_tools/: exampleEmailConfig.json  serverConf.json  serverConfigOperations.c  serverConfigOperations.h
deprecated/: README_C.md  tcp_client.c  tcp_server.c
emailFunctions/: emailFunction.c  emailFunction.h
emailHandling_tools/: emailHandlingOperations.c  emailHandlingOperations.h
encryption_tools/: encryptionOperations.c  encryptionOperations.h
fileOperationTools/: fileOperations.c  fileOperations.h
fileOperation_tools/: fileOperations.c  fileOperations.h
(+33 files in other folders)
